[package]
name = "hash_rstar"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
csv = "1.3.1"
dashmap = "6.1.0"
geo = "0.29.3"
geohash = "0.13.1"
geojson = "0.24.2"
rstar = "0.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = "0.34.7"
thiserror = "2.0.12"
