[package]
name = "hash_rstar"
version = "0.1.0"
edition = "2024"
authors = ["Zhaoyii <532708564@QQ.com>"]
description = "A concurrent spatial index combining geohash and R-tree data structures for efficient geographic point queries."
license = "MIT"
repository = "https://github.com/zhaoyii/hash-rstar"
keywords = ["geohash", "r-tree", "spatial-indexing"]
categories = ["geospatial"]
readme = "README.md"

[dependencies]
axum = "0.8.1"
bincode = "2.0.1"
criterion = "0.5.1"
csv = "1.3.1"
dashmap = "6.1.0"
geo = "0.29.3"
geohash = "0.13.1"
geojson = "0.24.2"
lazy_static = "1.5.0"
rand = "0.9.0"
rstar = "0.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = "0.34.7"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.2", features = ["cors"] }
